Agents reproduce two by two, altruism seems a bad strategy

--- a/bin/style.css
+++ b/bin/style.css
@@ -2,3 +2,7 @@
     -fx-background-radius: 0;   /* Reduce point size to 0 */
     -fx-padding: 0;             /* Remove padding around points */
 }
+
+.chart .axis .tick-label {
+    -fx-fill: black; 
+}
